# GVRP

./: .gitignore  GVRPLogFile.txt  NewResults.docx  OldGVRPLogFile.txt  PrelimResults.docx  README.md  ~WRL1409.tmp
Deliverables/815_F17_Shah_CodeDataAndResults/Code/: CMakeLists.txt  gvrp.cpp
Deliverables/815_F17_Shah_CodeDataAndResults/Code/mybuild/: GVRPNode.VC.VC.opendb
Deliverables/815_F17_Shah_CodeDataAndResults/data/: generateData.py  parse_CVRP_cluster.py
Deliverables/815_F17_Shah_CodeDataAndResults/results/: GVRP2_flow_n61_k17_m4_Q15_TL60.txt  P-n76-k5-c38_node_n76_k39_m5_Q280_TL60.txt  plotMap.py
Document/: ICTv3.bst  Proposal.aux  Proposal.bbl  Proposal.blg  Proposal.out  Proposal.tex  Proposal_bib.bib  ode23s.eps  ode45.eps
GVRP/: gvrp.cpp  sourceFiles.proj
GVRP_Flow/: CMakeLists.txt  gvrpflow.cpp  sourceFiles.proj
Presentation/: 815_F17_Shah_Presentation.aux  815_F17_Shah_Presentation.nav  815_F17_Shah_Presentation.out  815_F17_Shah_Presentation.pptx  815_F17_Shah_Presentation.snm  815_F17_Shah_Presentation.tex  815_F17_Shah_Presentation.toc
Proposal/: Proposal.aux  Proposal.bbl  Proposal.blg  Proposal.tex  Proposal_bib.bib  cooki.eps  oregonator.eps
data/: generateData.py  parse_CVRP_cluster.py  plotMap.py
forReporting/: A-n69-k9-c31_flow_n69_k32_m6_Q150_TL240.txt  A-n69-k9-c31_flow_n69_k32_m6_Q150_TL60.txt  A-n69-k9-c31_node_n69_k32_m6_Q150_TL60.txt  GVRP2_flow_n61_k17_m6_Q15_TL10.txt  GVRP2_node_n61_k17_m4_Q15_TL60.txt  GVRP2_node_n61_k17_m6_Q15_TL10.txt  P-n50-k10-c30_flow_n50_k31_m5_Q200_TL150.txt  P-n76-k5-c38_flow_n76_k39_m5_Q280_TL150.txt  plotMap.py
results/: A-n33-k5-c15_flow_33_16_5_TL2.txt  A-n65-k9-c28_flow_65_29_6_TL1.txt  A-n65-k9-c28_flow_65_29_6_TL20.txt  A-n65-k9-c28_flow_65_29_6_TL240.txt  A-n65-k9-c28_flow_65_29_6_TL360.txt  A-n65-k9-c28_flow_65_29_9_TL2.txt  A-n65-k9-c28_flow_n65_k29_m1_Q10000_TL2.txt  A-n69-k9-c31_flow_n69_k32_m6_Q150_TL0.txt  A-n69-k9-c31_flow_n69_k32_m6_Q150_TL1.txt  A-n69-k9-c31_flow_n69_k32_m6_Q150_TL10.txt  A-n69-k9-c31_flow_n69_k32_m6_Q150_TL150.txt  A-n69-k9-c31_flow_n69_k32_m6_Q150_TL2.txt  A-n69-k9-c31_flow_n69_k32_m6_Q150_TL240.txt  A-n69-k9-c31_node_n69_k32_m6_Q150_TL0.txt  A-n69-k9-c31_node_n69_k32_m6_Q150_TL1.txt  A-n69-k9-c31_node_n69_k32_m6_Q150_TL2.txt  A-n69-k9-c35_flow_69_36_9_TL2.txt  B-n31-k5-c4_flow_31_5_10_TL2.txt  B-n31-k5-c4_flow_31_5_4_TL2.txt  E-n76-k8-c37_flow_76_38_8_TL1.txt  E-n76-k8-c37_flow_76_38_8_TL10.txt  GVRP2_flow_n61_k17_m4_Q15_TL1.txt  GVRP2_flow_n61_k17_m4_Q15_TL2.txt  GVRP2_flow_n61_k17_m6_Q15_TL0.txt  GVRP2_flow_n61_k17_m8_Q15_TL2.txt  GVRP2_node_n61_k17_m4_Q15_TL1.txt  GVRP2_node_n61_k17_m6_Q15_TL0.txt  GVRP2_node_n61_k17_m6_Q15_TL30.txt  GVRP_flow_51_25_4_TL0.txt  GVRP_flow_51_25_4_TL1.txt  GVRP_flow_51_25_4_TL2.txt  GVRP_flow_51_25_6_TL0.txt  GVRP_flow_51_25_6_TL480.txt  GVRP_flow_n51_k25_m1_Q100_TL2.txt  GVRP_flow_n51_k25_m4_Q15_TL0.txt  GVRP_flow_n51_k25_m4_Q15_TL1.txt  GVRP_flow_n51_k25_m4_Q15_TL2.txt  GVRP_node_51_25_3_TL0.txt  GVRP_node_51_25_3_TL5.txt  GVRP_node_51_25_4_TL1.txt  (+47 more)
results/forReporting/: P-n50-k10-c30_flow_n50_k31_m5_Q200_TL60.txt
